# Updated_RAG

./: 00) Introduction_to_RAG.ipynb  01A) Introduction_and_Fundamentals.ipynb  01B) Practice.ipynb  02) Simple_RAG_Langchain.ipynb  03) Local_rag_ollama.ipynb  main.py  ollama_cheatsheet.ipynb  pyproject.toml  requirements.txt  simple_rag_langchain.ipynb
chroma_db/: chroma.sqlite3
faiss_index/: index.faiss  index.pkl
