[project]
name = "krish-naik-academy-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "datasets>=2.14.0",
    "faiss-cpu==1.12.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.25",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "opik>=1.10.58",
    "pandas>=3.0.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "ragas==0.3.9",
    "seaborn>=0.12.0",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
]
